# SiliconAngleSim

./: .clang_complete  CMakeLists.txt  README.md
config/: CompilerConfig.cmake  ParseVersion.cmake  ROOT.cmake
examples/: angle-fluence.yaml  angle-noise.yaml  angle-thickness.yaml  default.yaml  demo.yaml  offset-angle.yaml  simple.yaml  simple_variation.yaml  thickness-angle.yaml  thickness-fluence.yaml  thickness-noise.yaml
scripts/: SiliconAngleSim_batch.sh  runAllExamples_batch.sh  setup_SiliconAngleSim.sh.in
src/: AppConfig.h.in  Application.cpp  Application.h  main.cpp
src/common/: Common.cpp  Common.h  ConfigData.h  ConfigManager.cpp  ConfigManager.h  Physics.cpp  Physics.h
src/detectors/: StripDetector.cpp  StripDetector.h  StripSimulator.cpp  StripSimulator.h
src/plots/: PlotDemo.cpp  PlotDemo.h  PlotDistribution.cpp  PlotDistribution.h  PlotStyle.cpp  PlotStyle.h  PlotVariation.cpp  PlotVariation.h
src/simulation/: MCRunner.cpp  MCRunner.h  Results.cpp  Results.h  Simulation.cpp  Simulation.h  Track.h
